--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Hello from the Cloud</title>
 </head>
 <body>
-  <h1>It works!</h1>
+  <h1>Welcome to my site!</h1>
   <p>This static site is served securely via CloudFront + HTTPS 🚀</p>
 </body>
 </html>
