--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Welcome to my site!</h1>
-  <p>This static site is served securely via CloudFront + HTTPS 🚀</p>
+  <p>This static site is served securely via S3 + CloudFront + HTTPS 🚀</p>
 </body>
 </html>
