updated main.tf and index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </style>
 </head>
 <body>
-  <img class="logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original.svg" alt="cloudkraft logo">
+  <img class="logo" src="https://cloudkraft-site.s3.ap-southeast-2.amazonaws.com/logo.png" alt="cloudkraft.nz logo">
   <h1>Welcome to cloudkraft.nz</h1>
   <p>Your projects. Your cloud. One sharp domain.</p>
   <a href="mailto:erfan@cloudkraft.nz">Let’s Connect</a>
